<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gestion des succursales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userNameEdit">Identifiant</string>
    <string name="passwordEditText">Mot de passe</string>
    <string name="connectBtnText">Connexion</string>
    <string name="titleLogin">Identifiez-vous!</string>
    <string name="errorMessageLogin">Identifiant et/ou mot de passe incorrect(s)</string>
    <string name="addMenuItem">Ajouter</string>
    <string name="supprimerItem">Supprimer</string>
    <string name="afficherBugetItem">Afficher budget</string>
    <string name="profilItem">Profil</string>
    <string name="textViewTitleAccueil">Succursale(s) enregistrée(s) par</string>
    <string name="nomEtudiant" />
    <string name="btnLister">Lister</string>
    <string name="nombreSuccLbl">"Nombre de succursale(s) : "</string>
    <string name="titleAdd">Ajouter une nouvelle succursale</string>
    <string name="lblBudget">Budget de la succursale</string>
    <string name="villeLbl">Ville</string>
    <string name="revenirTxt">Revenir</string>
    <string name="addText">Ajouter la succursale</string>
    <string name="sucAjoute">Succursale ajouté avec succès</string>
    <string name="sucPasAjoute">Erreur. Veuillez essayer à nouveau</string>
    <string name="sucEfface">Succursale effacée</string>
    <string name="editBtnTxt">enregistrer</string>
    <string name="editTitle">Modifier succuersale</string>
    <string name="suppBtn">Supprimer toutes</string>
    <string name="suppLbl">supprimer\ntoutes</string>
    <string name="voirBudg">Voir budget</string>
    <string name="lblSeeFav">Voir favoris</string>
    <string name="deconcter">Se déconcter</string>
    <string name="deleteAll">Toutes les succursales ont été supprimées</string>
    <string name="error">Erreur essayez encore</string>
    <string name="favorisTitle">Vos favoris</string>
    <string name="NoAccountLbl">Vous n\'avez pas de compte? Cliquez-ici</string>
    <string name="nomHint">nom</string>
    <string name="prenomHint">Prénom</string>
    <string name="ajoutFav">Succursale ajoutée aux favorites</string>
    <string name="dejaCompte">Revenir à la connection</string>
    <string name="pbmEnregistrement" >Un problème est survenu lors de l\'enregistrement</string>
    <string name="enregistrementReussi" >Nouvel étudiant enregistré avec succès</string>
    <string name="modifW" >Succursale modifiée avec succès</string>
    <string name="sucNoFav" >Succursale enlevée des favorites</string>
    <string name="budgetTitle">Voir budget</string>
    <string name="cityNameTxt">Nom de la ville</string>
    <string name="errorTrouve">Aucune succursale trouvé</string>
    <string name="existeDeja">Erreur, le matricule est déjà pris!</string>
    <string name="erreurChamps">Erreur, veuillez rentrer tous les champs!</string>
    <string name="noSucs">Rien à afficher pour le moment</string>
</resources>