<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/userNom"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:width="300dp"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint="@string/nomHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/userPrenomEdt"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:width="300dp"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint="@string/prenomHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/userNom"
        app:layout_constraintStart_toStartOf="@+id/userNom"
        app:layout_constraintTop_toBottomOf="@+id/userNom" />

    <EditText
        android:id="@+id/matriculeEdit"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:width="300dp"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint="@string/userNameEdit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/userNom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNom"
        app:layout_constraintTop_toBottomOf="@+id/userPrenomEdt" />

    <EditText
        android:id="@+id/motDePAsseEdit"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:width="300dp"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/userNom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNom"
        app:layout_constraintTop_toBottomOf="@+id/matriculeEdit" />

    <Button
        android:id="@+id/enregistrerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="300dp"
        android:height="60dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/editBtnTxt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/userPrenomEdt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userPrenomEdt"
        app:layout_constraintTop_toBottomOf="@+id/motDePAsseEdit" />

    <TextView
        android:id="@+id/allerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dejaCompte"
        android:textColor="@color/bleu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enregistrerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>