<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AccueilFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottomNavigationView"-->
    <!--        android:layout_width="match_parent"-->

    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="#03A9F4"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:menu="@menu/menu" />-->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewTitleAccueil"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/nomStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomEtudiant"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonLister"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/bleuPale"
        android:textColor="@color/bleu"
        android:text="@string/btnLister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomStudent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/succursalesRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLister" />

    <TextView
        android:id="@+id/nombreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nombreSuccLbl"
        app:layout_constraintStart_toEndOf="@+id/nomStudent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/nombreSucc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/nombreLabel"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"

        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bleuPale">

            <ImageView
                android:id="@+id/imageDeconcter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_logout_24" />

            <ImageView
                android:id="@+id/imageAjout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/baseline_domain_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageDeconcter"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imgBudget"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/baseline_monetization_on_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageFavories"
                app:layout_constraintEnd_toStartOf="@+id/imageFavories" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/deconcter"
                android:textColor="@color/bleu"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageDeconcter"
                app:layout_constraintEnd_toEndOf="@+id/imageDeconcter"
                app:layout_constraintStart_toStartOf="@+id/imageDeconcter" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addMenuItem"
                android:textColor="@color/bleu"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageAjout"
                app:layout_constraintEnd_toEndOf="@+id/imageAjout"
                app:layout_constraintStart_toStartOf="@+id/imageAjout" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voirBudg"
                android:textColor="@color/bleu"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/imgBudget"
                app:layout_constraintStart_toStartOf="@+id/imgBudget" />

            <ImageView
                android:id="@+id/imageFavories"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSeeFav"
                android:textColor="@color/bleu"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/imageFavories"
                app:layout_constraintStart_toStartOf="@+id/imageFavories" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonDeleteAll"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/bleuPale"
        android:textColor="@color/bleu"
        android:text="@string/suppLbl"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLister"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>