<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterSuccursaleFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/bleu"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/titleAdd" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="203dp"
        android:layout_height="184dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_domain_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/editTextVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint=""
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_overlay"
        android:ems="10"
        android:hint=""
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVille" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/villeLbl"
        android:textColor="@color/bleu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextVille"
        app:layout_constraintStart_toStartOf="@+id/editTextVille"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBudget"
        android:textColor="@color/bleu"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextBudget"
        app:layout_constraintEnd_toEndOf="@+id/editTextBudget"
        app:layout_constraintStart_toStartOf="@+id/editTextBudget" />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="58dp"
        android:layout_height="69dp"
        android:src="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBudget"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/revenirLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revenirTxt"
        android:textColor="@color/bleu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageHome"
        app:layout_constraintStart_toStartOf="@+id/imageHome"
        app:layout_constraintTop_toBottomOf="@+id/imageHome" />

    <Button
        android:id="@+id/buttonAjouterSuccursale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/bleu"
        android:text="@string/addText"
        app:layout_constraintEnd_toEndOf="@+id/editTextBudget"
        app:layout_constraintStart_toStartOf="@+id/editTextBudget"
        app:layout_constraintTop_toBottomOf="@+id/editTextBudget" />

</androidx.constraintlayout.widget.ConstraintLayout>