<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavorisFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bleu"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/favorisTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"


        app:layout_constraintBottom_toTopOf="@+id/imageHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="58dp"
        android:layout_height="69dp"
        android:layout_marginBottom="13dp"
        android:src="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toTopOf="@+id/revenirLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/revenirLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/revenirTxt"
        android:textColor="@color/bleu"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageHome"
        app:layout_constraintStart_toStartOf="@+id/imageHome" />

    <TextView
        android:id="@+id/RienAfficher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noSucs"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/favRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

</androidx.constraintlayout.widget.ConstraintLayout>